* amaz - added /referral switch for building referral links for Amazon
* ebay - added about, all, feedback, items, my, and user switches (from Darrick ? and Brent Beardsley)
* sf - added status switch (from Brent Beardsley)
* chap - updated to work again (from Sarah Sweeney)
* babel - updated to work again (from Brent Beardsley)
* aj updated Ask Jeeves search (from Sam Mulube)

Miscellaneous

* Corrected documentation in help for adding a local, user search.
* New holiday database - holidays.cs.xml for the Czech Republic (from Jiri Sedlacek)
* New holiday database - holidays.gb.xml for England and Wales (James Robertson)

-- What's new for 3.1.5 (December 15, 2002)

Enhancements

* Added "mozillacal" as an option for the defaultcal preference to bring up the Mozilla calendar (although it doesn't go to the selected date yet)
* Moved the Computer and Reference searches into menu subcategories.
* Added parseArgsEx and trimWhitespace functions for additional argument parsing capabilities (from Brent Beardsley)
* Added ability to change specify the first day of the week (from Harry-Anton Talvik)
* Added Estonian calendar - holidays.et.xml (from Harry-Anton Talvik)
* Added Lyricsfind search by Steve Heil

New Searches

* txp - Search the tweak database on tweakxp.com (from Wolfgang Deutsch)
* chmodconv - convert chmod numbers to strings and vice versa (from Brent Beardsley)
* bb - Search BestBuy (from Glenn Carr)
* lipsum - Generate Lorem Ipsum text (from Glenn Carr)
* amo - Search Amo's Online Crossword Dictionary (from Matthew McDougal)
* jsenc - url encrypt/decrypt strings and optionally generate encoded mailto strings to hide from email harvesters (from Brent Beardsley)
* passgen - password generator (from Brent Beardsley)
* qrz - search QRZ Ham Radio Callsign Database (from Matthew McDougal)

Modified Searches

* amaz - added domain switch to search either amaz. com de uk jp ca or fr (from Wolfgang Deutsch)