@@ -27,17 +27,17 @@
   <contributor>Neel Doshi, Greg Mitchell</contributor>
   
   <form name="freetransfTEXT"
-        action="http://ets.freetranslation.com:5081/"
+        action="http://ets.freetranslation.com/"
         method="post">
     <input type="hidden" name="Sequence" value="core"/>
     <input type="hidden" name="Mode" value="html"/>
     <input type="hidden" name="template" value="TextResults2.htm"/>
-    <input type="hidden" name="Language"/>
+    <input type="hidden" name="Language"/>								  
     <input type="hidden" name="SrcText"/>
   </form>
   
   <form name="freetransfURL"
-        action="http://fets3.freetranslation.com:5081/"
+        action="http://fets3.freetranslation.com/"
         method="post">
     <input type="hidden" name="Sequence" value="core"/>
     <input type="hidden" name="Language"/>
